--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "elysiajs-nuxt",
-  "version": "0.3.7",
+  "version": "0.3.8",
   "license": "MIT",
   "author": "CHANG, TZU-YEN <try_love_tom@alljoint.tw> (https://github.com/trylovetom)",
   "homepage": "https://github.com/trylovetom/elysiajs-nuxt",
@@ -33,6 +33,7 @@
     "eslint": "^8.50.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "nitropack": "^2.8.0",
     "nuxt": "^3.8.1",
     "prettier": "^3.0.3",
     "prettier-package-json": "^2.8.0",
